--- a/创建函数式组件/函数式组件.html
+++ b/创建函数式组件/函数式组件.html
@@ -18,6 +18,6 @@
 		return <h1>我是一个函数式组件</h1>
 	}
 	//渲染组件到页面
-	ReactDOM.render(Demo(),document.getElementById("box1"));
+	ReactDOM.render(<Demo/>,document.getElementById("box1"));
 </script>
 </html>
