--- a/组件三大属性_pros/props基本使用.html
+++ b/组件三大属性_pros/props基本使用.html
@@ -18,6 +18,17 @@
 <script type="text/babel">
 	class Perspon extends React.Component{
 /* 		state={name:"张三",sex:"男",age:"12"}//固定值  不实用 */
+		static propTypes = {
+		name:PropTypes.string.isRequired,
+		age:PropTypes.string.isRequired,
+		speak:PropTypes.func
+		}
+		static defaultProps = {
+		name:"默认名字",
+		age:"0",
+		sex:"不男不女"
+		}
+		state={};//初始化状态
 		render(){
 			const {name,age,sex} = this.props
 			return (
@@ -29,18 +40,22 @@
 			)
 		}
 	}
-	//规则
+	/* //规则
 	Perspon.propTypes = {
 		name:PropTypes.string.isRequired,
 		age:PropTypes.string.isRequired,
+		speak:PropTypes.func
 	}
 	//默认值
 	Perspon.defaultProps = {
 		name:"默认名字",
 		age:"0",
 		sex:"不男不女"
+	} */
+	function speak(params) {
+		console.log("还哦的");
 	}
-	let p = {name:"赵子豪",age:"21",sex:"男"};//批量传递
+	let p = {name:"赵子豪",age:"21",sex:"男",speak:speak};//批量传递
 	ReactDOM.render(<Perspon {...p} />,document.getElementById("boxine"));
 </script>
 </html>
