--- a/React生命周期/(新)生命周期.html
+++ b/React生命周期/(新)生命周期.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="../JS/react.development.js"></script>
-	<script src="../JS/react-dom.development.js"></script>
-	<script src="../JS/babel.min.js"></script>
+	<script src="../newJS/react.development.js"></script>
+	<script src="../newJS/react-dom.development.js"></script>
+	<script src="../newJS/babel.min.js"></script>
 </head>
-
 <body>
 	<div id="box">
 
@@ -26,8 +24,11 @@
 			const { num } = this.state;
 			this.setState({ num: num + 1 });
 		}
-		componentWillMount() {
+		UNSAFE_componentWillMount() {
 			console.log("组件将要被挂载");
+		}
+		componentDidMount(){
+			console.log("组件挂载完毕");
 		}
 		componentWillUnmount() {
 			console.log("组件将要被卸载");
@@ -36,7 +37,7 @@
 			console.log("组件应该被更新");
 			return true;
 		}
-		componentWillUpdate() {// 更新前
+		UNSAFE_componentWillUpdate() {// 更新前
 			console.log("组件将要被更新");
 			return true
 		}
@@ -76,19 +77,19 @@
 		}
 	}
 	class B extends React.Component {
-		//第一次接收不算，第二次接受才会触发这个函数
-		componentWillReceiveProps(){
-			console.log("接受道Props参数");
+		UNSAFE_componentWillReceiveProps(e){
+			console.log("接受参数",e);
 		}
-		render() {
+		render(){
+			console.log("组件渲染");
+			
 			return (
 				<div>
-					<p>{this.props.carname}</p>
+					<h1>车:{this.props.carname}</h1>
 				</div>
 			)
 		}
 	}
-	ReactDOM.render(<A />, document.getElementById("box"));
+	ReactDOM.render(<A/>,document.getElementById("box"));
 </script>
-
 </html>
