--- a/React生命周期/总结生命周期.html
+++ b/React生命周期/总结生命周期.html
@@ -29,6 +29,9 @@
 		componentWillMount() {
 			console.log("组件将要被挂载");
 		}
+		componentDidMount(){
+			console.log("组件挂载完毕");
+		}
 		componentWillUnmount() {
 			console.log("组件将要被卸载");
 		}
